# BGL

./: .gitignore  CMakeLists.txt  README.md  graph.h  main.cpp  test_graphs.h
data/: shock.txt
